remove docker tests
